--- a/projective_plane_over_finite_field/projective_plane_over_a_finite_field.tex
+++ b/projective_plane_over_finite_field/projective_plane_over_a_finite_field.tex
@@ -42,7 +42,9 @@
 		
 		If $\lambda \neq \mu$ the matter is a bit technical. We only show "$\subseteq$", the other direction is similar: let $[z]=[v+t(w-v)]\in g([v], [w])$. With $a:=\frac{\lambda \mu}{\mu-\mu t+\lambda t}$ and $t':=\frac{\lambda t}{\mu-\mu t + \lambda t}$ we find for $\mu-\mu t + \lambda t\neq 0$ with a short calculation $a z = v'+t'(w'-v')$ and hence $[z]\in g([v'], [w'])$. If $\mu-\mu t + \lambda = 0$ we have $[z]=[v+\frac{\mu}{\mu-\lambda}(w-v)]=[\frac{1}{\mu - \lambda}(\mu w - \lambda v)]=[w'-v']\in g([v'], [w'])$
 	\end{proof}
-	TODO: homgenous coordinates
+
+	For every $[v]\in \operatorname{P}(V)$ there is a unique representation $[v]=[(\tilde{v}, a)]=[(\frac{1}{a}\tilde{v},1)]$ if $a\neq 0$ and $[v]=[(\tilde{v}, 0)]$ else. We write $(\frac{1}{a}\tilde{v}:1)$ or $(\tilde{v}:0)$ for this and call these the homogenous coordinates of $[v]$. 
+
 	\section{Projective plain over a finite field}
 	\begin{definition}[Projective plain]
 		$\operatorname{P}(k^2)$ is called the projective plane over $k$.
@@ -54,11 +56,23 @@
 	
 		The set of lines in $\operatorname{P}(\mathbb{F}_q^2)$ consists of three types of lines:
 		\begin{itemize}
-			\item for every $y,m\in \mathbb{F}_q$: $$g_{y,m}:=g((0:y:1), (1:y+m:1))=\{(0:y:1)+ t(1:m:1)\mid t\in \mathbb{F}_q\}\cup \{(1:m:0)\}$$
-			\item for every $x\in \mathbb{F}_q$: $$g_{x,\infty}:=g((x:0:1),(x:1:1))=\{(x:t:1)\mid t\in \mathbb{F}_q\}\cup \{(0:1:0)\}$$
-			\item $g_{\infty, \infty}:=g((1:0:0),(0:1:0))=\{(t:1:0)\mid t\in \mathbb{F}_q\}\cup \{(1:0:0)\}$
+			\item for every $y,m\in \mathbb{F}_q$ the line with y-axis intercept $y$ and gradient $m$: $$g_{y,m}:=g((0:y:1), (1:y+m:1))=\{(0:y:1)+ t(1:m:1)\mid t\in \mathbb{F}_q\}\cup \{(1:m:0)\}$$
+			\item for every $x\in \mathbb{F}_q$ the vertical line with x-axis intercept $x$: $$g_{x,\infty}:=g((x:0:1),(x:1:1))=\{(x:t:1)\mid t\in \mathbb{F}_q\}\cup \{(0:1:0)\}$$
+			\item the line at infinity:
+			$$g_{\infty, \infty}:=g((1:0:0),(0:1:0))=\{(t:1:0)\mid t\in \mathbb{F}_q\}\cup \{(1:0:0)\}$$
 		\end{itemize}
-		Hence the number of points as well as the number of lines in $\operatorname{P}(\mathbb{F}_q^2)$ is $q^2 +q+1$.
+		
+		The number of points is $q^2 +q+1$. 
+		
+		The number of lines is $q^2 +q+1$. 
+		
+		There are $p+1$ lines containing a point.
+		
+		There are $q + 1$ points contained in a line.
+		
+		Two distinct points have exactly one line in common.
+		
+		Two distinct lines have exactly one point in common.
 	\end{propostition}
 	\begin{proof}
 		TODO
