--- a/roomgroups/Raumgruppenproblem.tex
+++ b/roomgroups/Raumgruppenproblem.tex
@@ -145,8 +145,8 @@
 	Bemerkungen:
 	\begin{itemize}
 		\item Der Inhalt von Lemma~\ref{lemma:lemma_partitionen} kann wie folgt umformuliert werden: $I$, $I_1$ und $I_2$ seien wie im Lemma. Zudem sei allgemein $\mathcal{A}_L:=\{J\subseteq N \;|\; L\cap J\neq \emptyset, k_J>0\}$ für ein beliebiges $L\subseteq N$. Dann folgt die Ungleichung~\ref{eq:condition} für $I$ aus den Ungleichungen~\ref{eq:condition} für $I_1$ und $I_2$, falls $\mathcal{A}_{I_1}\cap \mathcal{A}_{I_2}=\emptyset$.
-		\item Das Finden von $I_1$ und $I_2$ mit dieser Eigenschaft wird rasch sehr aufwändig. Es ist deshalb ratsam, in einem ersten Schritt, die Menge $N$ wie folgt in unabhängige Komponenten zu zerlegen: die Elemente von $N$ seien die Knoten eines (ungerichteten) Graphen. Zwei unterschiedliche Knoten $i\in N$ und $j\in N$ sind durch eine Kante verbunden, falls ein sowohl $i$ als auch $j$ enthaltendes $L\subseteq N$ mit $k_L > 0$ existiert. Das Problem kann dann statt auf dem gesamten $N$ auf allen Zusammenhangskomponenten von $G$ betrachtet werden.
-		\item In einem Anwendungsbeispiel aus der Stundenplanung an einer Schule mit $|N|=28$ Raumgruppen und $95$ nicht-leeren Teilmengen $I\subseteq N$ mit $k_I > 0$, zerfällt $N$ in $15$ Komponenten, wovon die grösste $13$ Elemente hat. In dieser grössten Komponente können von den $2^{13} - 1=8191$ Ungleichungen~\ref{eq:condition} mit dem oben beschriebenen Verfahren innerhalb weniger Sekunden $6021$ Ungleichungen eliminiert werden, sodass $2170$ Ungleichungen übrig bleiben.
+		\item Das Finden von $I_1$ und $I_2$ mit dieser Eigenschaft wird rasch sehr aufwändig. Es ist deshalb ratsam, in einem ersten Schritt, die Menge $N$ wie folgt in unabhängige Komponenten zu zerlegen: die Elemente von $N$ seien die Knoten eines (ungerichteten) Graphen. Zwei unterschiedliche Knoten $i\in N$ und $j\in N$ sind durch eine Kante verbunden, falls ein sowohl $i$ als auch $j$ enthaltendes $L\subseteq N$ mit $k_L > 0$ existiert. Das Problem kann dann statt auf dem gesamten $N$ auf allen Komponenten von $G$ betrachtet werden.
+		\item In einem Anwendungsbeispiel aus der Stundenplanung an einer Schule mit $|N|=28$ Raumgruppen und $31$ Teilmengen $I\subseteq N$ mit $k_I > 0$, zerfällt $N$ in $15$ Komponenten, wovon die grösste $13$ Elemente hat. In dieser grössten Komponente können von den $2^{13} - 1=8191$ Ungleichungen~\ref{eq:condition} mit dem oben beschriebenen Verfahren innerhalb weniger Sekunden $7350$ Ungleichungen eliminiert werden, sodass $841$ Ungleichungen übrig bleiben. Die anderen Komponenten sind im Vergleich klein, sodass total $857$ relevante Ungleichungen resultieren.
 		\item Dieses Beispiel zeigt, dass die Anzahl der Ungleichungen~\ref{eq:condition} in der Praxis auch nach Zerlegung des Problems in Teilprobleme und Elimination der unnötigen Ungleichungen noch gross bleiben kann. Je nachdem ist es also effizienter, mit Hilfe eines  wie in Definition~\ref{def:abdeckung_bedarf} beschriebenen linearen ganzzahligen Programms sicherzustellen, dass der Bedarf durch die Kapazität abgedeckt werden kann.
 	\end{itemize}
 	
